# bitpacker

./: Cargo.toml  README.md
.claude/: settings.local.json
bitcram/: Cargo.toml
bitcram/examples/: mini_chess.rs
bitcram/src/: buffer.rs  lib.rs  packable.rs  packer.rs  unpacker.rs
bitcram/src/extensions/: array.rs  bool.rs  option.rs
bitcram/tests/: packable.rs
bitcram/tests/types/: mod.rs
bitcram_bench/: Cargo.toml
bitcram_bench/benches/: compare.rs
bitcram_derive/: Cargo.toml  README.md
bitcram_derive/src/: lib.rs
bitpacker/: Cargo.toml
bitpacker/examples/: mini_chess.rs
bitpacker/src/: buffer.rs  extensions.rs  lib.rs  packable.rs  packer.rs  shared.rs  unpacker.rs
bitpacker/src/extensions/: tuple.rs
bitpacker/tests/: packable.rs
bitpacker_bench/: Cargo.toml
bitpacker_bench/benches/: compare.rs
bitpacker_derive/: Cargo.toml
bitpacker_derive/src/: lib.rs
